--- a/README
+++ b/README
@@ -29,6 +29,7 @@ by default.
   --protect (-p)       Protection is set for memory addresses
                        0 through 0x3fff (16384 bytes). Simulator
 					   will trap if program writes to this area.
+  --undoc (-u)         Trap on undocumented instructions.
   --zilog (-z)         Outputs Zilog mnemonic output for indexed
                        instructions instead of default.
   --halt               Emulator stops executing when HALT instruction
